Fix alignment for side navbar

--- a/style.css
+++ b/style.css
@@ -12,14 +12,14 @@ body {
 
 .dashboard {
     display: grid;
-    grid-template-columns: minmax(270px, 1fr) 4fr;
+    grid-template-columns: minmax(260px, 1fr) 4fr;
     height: 100%;
 }
 
 .side-nav {
     background-color: #1992d4;
     padding: 15px;
-    font-size: 18px;
+    font-size: calc(14px + 0.3vw); 
     font-weight: 600;
 }
 
@@ -39,11 +39,15 @@ body {
 }
 
 .menu div {
-    margin: 20px 0;
+    padding: 10px;
     display: grid;
     grid-template-columns: 50px 1fr;
-    gap: 14px;
+    gap: 5px;
     align-items: center;
+}
+
+.menu div:hover {
+    background-color: #ffffff33;
 }
 
 #sidebar-gap {
